--- a/Portefolie/omMeg.css
+++ b/Portefolie/omMeg.css
@@ -52,34 +52,38 @@ body {
 /*parti 2*/
   .aboutMe{   
     display: grid;
-    gap: 15px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 8em;
+    grid-template-columns: repeat(3, 1fr);
+    
+    margin-left: 10%;
+    margin-right: 10%;
+    gap: 2em;
+    row-gap: 7em;
     margin-bottom: 10em;
-   
   
     grid-template-areas: 
-        "abo1 jpg1"
-        "jpg2 abo2"
+        "aboO aboO aboO"
+        "abo3 abo3 abo3"
+        "abo1 jpg1 jpg3"
+        "jpg4 abo2 abo2"
+        "jpg5 jpg2 jpg6"
         ;
   }
-  #aboutMe1{    grid-area: abo1;   height: 23vw;   line-height: 1.5;   font-size: 1.1em;}
-  #aboutMe2{    grid-area: abo2;   height: 23vw;   line-height: 1.5;   font-size: 1.1em;}
-  #aboutMejpg1{ grid-area: jpg1;   width: 19em;    height: 25em;   border-radius: 1em;     object-fit: cover;      overflow: hidden;}
-  #aboutMejpg2{ grid-area: jpg2;   width: 19em;    height: 25em;   border-radius: 1em;     object-fit: cover;      overflow: hidden;}
-  #aboutMejpg1 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  #aboutMejpg2 img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+  #aboutMeOverskrift{ grid-area: aboO;   font-size: 3em;  text-align: center;   padding-top: 4em;} 
+  #aboutMe1{          grid-area: abo1;   height: 100%;    line-height: 1.5;     font-size: 1.1em;       } 
+  #aboutMe2{          grid-area: abo2;   height: 100%;    line-height: 1.5;     font-size: 1.1em;       width: 60%;}
+  #aboutMe3{          grid-area: abo3;   height: 100%;    line-height: 1.5;     font-size: 1.1em;       text-align: center;}
+  #aboutMejpg1{       grid-area: jpg1;   width: 100%;     height: 100%;         object-fit: cover;      overflow: hidden;   border-top-left-radius: 1em;   border-bottom-left-radius: 1em;}
+  #aboutMejpg2{       grid-area: jpg2;   width: 100%;     height: 100%;         object-fit: cover;      overflow: hidden;}
+  #aboutMejpg3{       grid-area: jpg3;   width: 100%;     height: 100%;         object-fit: cover;      overflow: hidden;   border-top-right-radius: 1em;   border-bottom-right-radius: 1em;}
+  #aboutMejpg4{       grid-area: jpg4;   width: 80%;      height: 100%;         object-fit: cover;      overflow: hidden;   border-radius: 1em;}
+  #aboutMejpg5{       grid-area: jpg5;   width: 100%;     height: 100%;         object-fit: cover;      overflow: hidden;}
+  #aboutMejpg6{       grid-area: jpg6;   width: 100%;     height: 100%;         object-fit: cover;      overflow: hidden;}
+  #aboutMejpg1 img {                     width: 100%;     height: 100%;         object-fit: cover;}
+  #aboutMejpg2 img {                     width: 100%;     height: 100%;         object-fit: cover;}
+  #aboutMejpg3 img {                     width: 100%;     height: 100%;         object-fit: cover;}
+  #aboutMejpg4 img {                     width: 100%;     height: 100%;         object-fit: cover;}
+  #aboutMejpg5 img {                     width: 100%;     height: 100%;         object-fit: cover;}
+  #aboutMejpg6 img {                     width: 100%;     height: 100%;         object-fit: cover;}
 
 
 
@@ -135,20 +139,29 @@ body {
       display: grid;
       margin-left: 20%;
       margin-right: 20%;
+      text-align: center;
       grid-template-columns: 1fr;
-      grid-template-rows: 3fr, 2fr, 3fr, 2fr;
+      grid-template-rows: repeat(9, 1fr);
 
-      grid-template-areas: 
-        "jpg1"
+      grid-template-areas:
+        "aboO"
+        "abo3"
+        "jpg3"
         "abo1"
-        "jpg2"
+        "jpg4"
         "abo2"
+        "jpg5"
+        "jpg2"
+        "jpg6"
         ;
     }
+
     #aboutMe1{    width: 100%;    height: 100%;}
     #aboutMe2{    width: 100%;    height: 100%;}
-    #aboutMejpg1{ width: 100%;    height: 30em;}
+    #aboutMejpg1{ display: none;}
     #aboutMejpg2{ width: 100%;    height: 30em;}
+    #aboutMejpg3{ border-radius: 1em;}
+    #aboutMejpg4{ width: 100%;}
 
     footer{
         height: 50vw;
