--- a/Portefolie/prosjekter.css
+++ b/Portefolie/prosjekter.css
@@ -48,33 +48,34 @@ body {
 }
 
 
-
-/*parti 2*/
+/*Hovedgreia:)*/
   .hobbies{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    column-gap: 4em;
-    text-align: center;
+    grid-template-columns: 1fr, 1fr;
+    grid-template-rows: repeat(4, 1fr);
+    row-gap: 2em;
+    align-items: center;
     padding-top: 8em;
     padding-bottom: 10em;
     line-height: 1.3;
-    margin-left: 23%;
-    margin-right: 23%;
+    margin-left: 25%;
+    margin-right: 25%;
+    
   
     grid-template-areas: 
-        "titl titl titl"
-        "food acti movi"
-        "fooT actT movT"
+        "titl titl"
+        "food fooT"
+        "acti actT"
+        "movi movT"
         ;
   }
-  #title{           grid-area: titl;    padding-top: 2em;   padding-bottom: 5em;}
-  #food{            grid-area: food;    height: 10em;}
-  #foodText{        grid-area: fooT;}
-  #activities{      grid-area: acti;    height: 10em;}
-  #activitiesText{  grid-area: actT;}
-  #movies{          grid-area: movi;    height: 10em;}
-  #moviesText{      grid-area: movT;}
+  #title{           grid-area: titl;    font-size: 1.8em; text-align: center;}
+  #food{            grid-area: food;    height: 15em;}
+  #foodText{        grid-area: fooT;    padding-left: 3em;}
+  #activities{      grid-area: acti;    height: 15em;}
+  #activitiesText{  grid-area: actT;    padding-left: 3em;}
+  #movies{          grid-area: movi;    height: 15em;}
+  #moviesText{      grid-area: movT;    padding-left: 3em;}
   #food img{
     width: 100%;
     height: 100%;
@@ -154,8 +155,8 @@ body {
 
     .hobbies{
       text-align: center;
-      padding-top: 8em;
       padding-bottom: 1em;
+      row-gap: 0em;
       grid-template-columns: 1fr;
       grid-template-rows: repeat(7, 1fr);
   
@@ -169,13 +170,13 @@ body {
         "movT"
         ;
     } 
-    #title{           padding-top: 2em;   padding-bottom: 5em;}
-    #food{            height: 10em;   border-radius: 1em;}
-    #foodText{        grid-area: fooT;}
-    #activities{      height: 10em;   border-radius: 1em;}
-    #activitiesText{  grid-area: actT;}
-    #movies{          height: 10em;   border-radius: 1em;}
-    #moviesText{      grid-area: movT;}
+    #title{           padding-top: 2em; padding-bottom: 5em;}
+    #food{            height: 10em;     border-radius: 1em;}
+    #foodText{        grid-area: fooT;  padding-left: 0em;}
+    #activities{      height: 10em;     border-radius: 1em;}
+    #activitiesText{  grid-area: actT;  padding-left: 0em;}
+    #movies{          height: 10em;     border-radius: 1em;}
+    #moviesText{      grid-area: movT;  padding-left: 0em;}
 
     footer{
       height: 50vw;
